--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "stat.h": "c",
         "types.h": "c",
-        "user.h": "c"
+        "user.h": "c",
+        "proc.h": "c",
+        "stdarg.h": "c"
     }
 }
